custom scrollbar + fix bg color

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     color: white;
     overflow: hidden;
+    background: #34475ab0;
 }
 
 #menu-bar {
@@ -73,6 +74,19 @@ body {
     flex-wrap: wrap;
     overflow: auto;
 
+}
+
+.app-container::-webkit-scrollbar {
+    width: 1em;
+}
+
+.app-container::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+.app-container::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
 }
 
 .app-btn {
